# Project_8_Equipo1_DataScientist

./: .env.example  .gitignore  Readme.md  docker-compose.yml  dockerfile  environment.yml  main.py  pyproject.toml  test_sistema_completo.py
.github/: ci-cd.yml
.github/workflows/: ci-cd.yml
.streamlit/: secrets.toml
app/: app.py  informe_estratificacion_riesgo_ictus_ml.md
cnn/notebooks/: 04_CNN_final.ipynb
config/: model_config.yaml
data/processed/: stroke_dataset_adultos.csv  stroke_dataset_general.csv
doc/: project_report_ictus.md
mlruns/0/: meta.yaml
mlruns/162186314945541774/: meta.yaml
mlruns/162186314945541774/15d857b0fcc348c9ac0f33611cc61a6f/: meta.yaml
mlruns/314868173493193477/: meta.yaml
mlruns/314868173493193477/185d45fd903c46f789809943c3a271d8/: meta.yaml
mlruns/314868173493193477/574775d9945049adb421c6084af80d59/: meta.yaml
mlruns/314868173493193477/774a236a140547df852b3e5deefa45d2/: meta.yaml
mlruns/671783000064998482/: meta.yaml
models/: XGB_optuna_final.joblib  metadata.json
models/cnn/: baseline_cnn_best.keras  cnn_metadata.json
notebooks/: 01_EDA.ipynb  02_Modeling_v1.ipynb  02_Modeling_v2.ipynb  02_modeling.ipynb  02_modeling_v3.ipynb
scripts_infra/: test_supabase.py
src/config/: model_config.py
src/data/: dataset.py
src/features/: build_features.py
src/models/: evaluate.py  mlflow_logger.py  pipeline.py  plots.py  save.py  train.py
test/: conftest.py  test_data.py  test_features.py  test_model.py
test_infra/: test_sistema_completo.py  test_supabase.py
(+423 files in other folders)
